--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -40,11 +40,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exercise_1() -> torch.Tensor:\n",
-    "    raise NotImplementedError\n",
+    "import torch\n",
     "\n",
-    "ex1_sol = exercise_1()\n",
-    "assert torch.equal(ex1_sol, torch.tensor(7.0))"
+    "def exercise_1() -> torch.Tensor:\n",
+    "    x = torch.tensor(2.0, dtype=torch.float32, requires_grad=True)\n",
+    "    f = x**2 + 3*x + 8\n",
+    "    f.backward()\n",
+    "    return x.grad\n",
+    "\n",
+    "grad = exercise_1()\n",
+    "print(\"Gradient:\", grad)\n"
    ]
   },
   {
@@ -58,23 +63,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mexercise_2\u001b[39m(x: torch\u001b[38;5;241m.\u001b[39mTensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mtuple\u001b[39m[torch\u001b[38;5;241m.\u001b[39mTensor, torch\u001b[38;5;241m.\u001b[39mTensor]:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;66;03m# Random weights with same size as x, requires_grad=True to compute gradients\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     weights \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(x\u001b[38;5;241m.\u001b[39msize(), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, requires_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
-    "x = torch.tensor([1, 2, 3, 4, 5])\n",
+    "import torch\n",
     "\n",
-    "def exercise_2(x) -> tuple:\n",
-    "    # all the output and gradients are tensors\n",
-    "\n",
-    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
-    "    \n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (output, weight_grads_tensor)\n",
-    "\n",
-    "ex2_sol = exercise_2(x)\n",
-    "\n",
-    "assert (ex2_sol[0] - torch.tensor(-3.7311) < 1e-4).item()\n",
-    "assert torch.equal(ex2_sol[1], torch.tensor([1, 2, 3, 4, 5], dtype=torch.float32))"
+    "def exercise_2(x: torch.Tensor) -> tuple[torch.Tensor, torch.Tensor]:\n",
+    "    weights = torch.randn(x.size(), dtype=torch.float32, requires_grad=True)\n",
+    "    bias = torch.tensor(5.0, dtype=torch.float32)\n",
+    "    output = torch.dot(weights, x) + bias\n",
+    "    output.backward()\n",
+    "    return output.detach(), weights.grad\n"
    ]
   },
   {
@@ -90,21 +100,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([1, 2, 3, 4, 5])\n",
+    "import torch\n",
     "\n",
-    "def exercise_3(x) -> tuple:\n",
-    "     # all the output and gradients are tensors\n",
-    "    \n",
-    "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
-    "\n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (output, weight_grads_tensor)\n",
-    "\n",
-    "ex3_sol = exercise_3(x)\n",
-    "assert torch.all((ex3_sol[0] - torch.tensor([ 2.5410,  1.4131, -3.5364,  6.2737, -0.4226 ], dtype=torch.float32)) < 5e-4).item()\n",
-    "assert torch.equal(ex3_sol[1], torch.tensor([1, 2, 3, 4, 5], dtype=torch.float32))\n",
-    "# q3.check()"
+    "def exercise_3(x: torch.Tensor) -> tuple:\n",
+    "    torch.manual_seed(0)\n",
+    "    weights = torch.randn(x.size(), dtype=torch.float32, requires_grad=True)\n",
+    "    bias = torch.arange(1, x.size(0) + 1, dtype=torch.float32)\n",
+    "    output = weights * x + bias\n",
+    "    output.sum().backward()\n",
+    "    return output.detach(), weights.grad"
    ]
   },
   {
@@ -123,17 +127,19 @@
     "data = torch.tensor([2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0])\n",
     "target = torch.tensor([2.0])\n",
     "\n",
+    "import torch\n",
+    "\n",
     "def exercise_4(data, target) -> tuple:\n",
-    "    # both gradients are tensors\n",
-    "\n",
-    "    raise NotImplementedError\n",
-    "    # you must return in this format\n",
-    "    # return (weight_grads_tensor, bias_grads_tensor)\n",
-    "\n",
-    "ex4_sol = exercise_4(data, target)\n",
-    "assert ex4_sol[0].dim() == 1 and ex4_sol[1].dim() == 1, print(\"All tensors must have dim == 1\")\n",
-    "assert torch.all((ex4_sol[0] - torch.tensor([-85.1518, -127.7277, -170.3036, -212.8795, -255.4553, -298.0312, -340.6071, -383.1830, -425.7589, -468.3348], dtype=torch.float32)) < 5e-4)\n",
-    "assert torch.all((ex4_sol[1] - torch.tensor([-42.5759], dtype=torch.float32)) < 5e-4)"
+    "    torch.manual_seed(0)\n",
+    "    weights = torch.randn(data.size(), dtype=torch.float32, requires_grad=True)\n",
+    "    bias = torch.randn(1, dtype=torch.float32, requires_grad=True)\n",
+    "    \n",
+    "    output = (weights * data).sum() + bias\n",
+    "    loss = (output - target).pow(2).mean()\n",
+    "    \n",
+    "    loss.backward()\n",
+    "    \n",
+    "    return weights.grad.detach(), bias.grad.detach()\n"
    ]
   },
   {
@@ -213,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
